Revert "improve logo flexibility to fix wide custom logo alignment, fix #9339"
This reverts commit 064e6951e1ef792422ff6cf24fce79c2320d4d5e.

Reverting due to regression that breaks styles in error page, setup
page and others.

Fixes #10967

--- a/core/css/header.css
+++ b/core/css/header.css
@@ -42,7 +42,8 @@
 }
 
 #header .logo {
-	background: url(../img/logo.svg) no-repeat center;
+	background-image: url(../img/logo.svg);
+	background-repeat: no-repeat;
 	width: 252px;
 	height: 120px;
 	margin: 0 auto;
